# project-journal-and-timecard

./: LICENSE  README.md
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: pjt-local-storage.json
src-tauri/src/: main.rs
