[package]
name = "project-journal-and-timecard"
version = "2.9.0"
description = "Project Journal & Timecard (PJT)"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
